Prerelease parity bump